# skard-old

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
cmake/: FetchCMocka.cmake
skard-docs/: index.md
skard-lib/src/: chunk.c  chunk.h  debug.c  debug.h  error.c  error.h  memory.c  memory.h  skard.h  value.c  value.h  vm.c  vm.h
skard-runtime/src/: main.c
tests/: template.c  test_chunk.c  test_empty.c  unit_common.h
